welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:11: error: not found: value biscuits
     	 biscuits=biscuits+1;
         ^Poucet:14: error: not found: value biscuits
	if (biscuits>=3){
            ^